switched output fix to a command line arg